@@ -2,6 +2,7 @@ Process Hacker
 
 2.35
  * NEW/IMPROVED:
+   * Support for up to 64 processors when setting process/thread affinity
  * FIXED:
 
 2.34
